Modified header comments of the delf command

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 -----------------------------------------------------------------
+TICKET 006
+
+
+-----------------------------------------------------------------
 TICKET 005
 
 マニュアルをUECサイトのマニュアルデータから生成する仕組みを作成し
