Addition of a ticket to TODO

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 -----------------------------------------------------------------
 TICKET 006
 
-
+/tmp下を使って中間ファイルを作っているものを、tempfileモジュール
+を使うように修正する。
 -----------------------------------------------------------------
 TICKET 005
 
