added one ticket

--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------
+TICKET 007
+
+namereadコマンドが、regexモジュールを呼び出すために、python2.5以
+上の環境で動かないとの指摘あり。すぐに修正。
+-----------------------------------------------------------------
 TICKET 006
 
 /tmp下を使って中間ファイルを作っているものを、tempfileモジュール
