addition of Ticket007

--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------
+TICKET 007
+
+yarrにバグがあるので取り除く。
+seq 1 10 | yarr とすると先頭に空白が入る。
+-----------------------------------------------------------------
 TICKET 006
 
 /tmp下を使って中間ファイルを作っているものを、tempfileモジュール
