--- a/README
+++ b/README
@@ -5,22 +5,21 @@
 Open usp Tukubaiとは
 ====================
 
-ユニバーサル・シェル・プログラミング研究所 (USP研究所)では、
-コマンドとシェルスクリプトを活用したシステム開発やシェルプロ
-グラミングの普及・教育活動を実施している。Open usp Tukubaiは、
-シェルを利用したデータ処理の可能性を体感していただくために、
-商用版のTukubai(有償)から利用頻度の高いものを厳選し、一部の
-機能をオープンソースソフトウェアとして実装し公開したものである。
+Open usp Tukubaiは短期間低コストで企業システムを構築するエン
+タープライズ向けコマンド群「usp Tukubai」のオープンソースソ
+フトウェア版。ユニケージ開発手法の普及促進を狙い、usp Tukubai
+から特に利用頻度の高いものを選定して提供されている。
 
-業務システムにおけるシェルおよびシェルスクリプトの用途を広げ
-るためのUNIX環境用コマンド群であり、The MIT Licenseのもとで
-オープンソースソフトウェアとして公開している。テキストデータの
-集計や結合(リレーション)、その他業務システムで利用するコマ
-ンドが用意されている。
+Open usp Tukubaiは基幹業務システム、情報分析システム、データ
+バッチ処理、高速検索システム、勘定系システムなどにおけるシェ
+ルおよびシェルスクリプトの用途を広げるためのUNIX環境用コマン
+ド群であり、The MIT Licenseのもとでオープンソースソフトウェア
+として公開されている。テキストデータの集計や結合 (リレーショ
+ン)、その他業務システムで利用するコマンドが用意されている。
 
-Open usp Tukubaiはターミナルから操作するインタラクティブな
-データ処理作業から、シェルスクリプトによる業務システムの構築・
-業務用Webアプリケーションの構築まで、UNIXの基本機能を最大限に
+Open usp Tukubaiはターミナルから操作するインタラクティブなデー
+タ処理作業から、シェルスクリプトによる業務システムの構築・業
+務用Webアプリケーションの構築まで、UNIXの基本機能を最大限に
 活用するプログラミング能力を提供する。
 
 Open usp Tukubaiのサポート(有償)、商用版Tukubaiに関するお問
@@ -58,7 +57,10 @@ info@usp-lab.comまでご連絡いただきたい。
   https://uec.usp-lab.com/tukubai_man
 
 付属のマニュアル
-  デフォルトインストール先は/usr/local/share/open-usp-tukubai/man/
+  デフォルトインストール先は
+    /usr/local/share/open-usp-tukubai/devel/pdf/
+    /usr/local/share/open-usp-tukubai/devel/html/
+    /usr/local/share/open-usp-tukubai/devel/man/
 
 
 文献
@@ -75,3 +77,5 @@ USP MAGAZINE
 Open up TukubaiはThe MIT Licenseに基づき、USP研究所が無償で配布
 している。The MIT Licenseの詳細についてはLICENSEファイルを参照の
 こと。
+
+※ユニケージはユニバーサル・シェル・プログラミング研究所の登録商標。
