--- a/README
+++ b/README
@@ -1,6 +1,6 @@
                Universal Shell Programming Laboratory
                           info@usp-lab.com
-                    Thu May  3 15:08:58 JST 2012
+                    Wed Aug  1 14:10:11 JST 2012
 
 Open usp Tukubaiとは
 ====================
@@ -66,9 +66,12 @@ info@usp-lab.comまでご連絡いただきたい。
 文献
 ====
 
-日経LINUX3月号
-技術評論社 Software Design
-USP MAGAZINE
+  https://uec.usp-lab.com/
+    UEC - usp engineers' community site
+
+  - USP MAGAZINE
+  - 技術評論社 Software Design
+  - 日経LINUX3月号
 
 
 ライセンスについて
