--- a/TODO
+++ b/TODO
@@ -4,8 +4,7 @@ TICKET 006
 /tmp下を使って中間ファイルを作っているものを、tempfileモジュール
 を使うように修正する。
 -----------------------------------------------------------------
-TICKET 005
-
+TICKET 005 (COMPLETED)
 マニュアルをUECサイトのマニュアルデータから生成する仕組みを作成し
 同期させるようにする。
 -----------------------------------------------------------------
