--- a/deb/README
+++ b/deb/README
@@ -9,7 +9,7 @@ open-usp-tukubai_20120802-1_i386.deb
 # i386 install to /opt/usp/bin
 open-usp-tukubai_20120802-2_i386.deb
 
-# amd64 install to /opt/usp/bin
+# amd64 install to /usr/local/bin
 open-usp-tukubai_20120802-1_amd64.deb
 
 # amd64 install to /opt/usp/bin
