--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------
+TICKET 007
+
+
+Macでmakeが通らないので修正する。
+-----------------------------------------------------------------
 TICKET 006
 
 /tmp下を使って中間ファイルを作っているものを、tempfileモジュール
