Update kasan, rank, ratio and up3.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ﻿               Universal Shell Programming Laboratory
-                         uecgit@usp-lab.com
-                             2022/10/27
+                         uecinfo@usp-lab.com
+                             2022/11/21
 
 Open usp Tukubaiとは
 ====================
