Update kasan, rank, ratio and up3.

--- a/man/kasan.1
+++ b/man/kasan.1
@@ -19,7 +19,7 @@ kasan\ :\ 累計
 .br
 Usage\ \ \ :\ kasan\ [+r]\ [ref=<ref>]\ key=<n>\ [<file>]
 .br
-Version\ :\ Mon\ Nov\ 15\ 02:12:05\ JST\ 2022
+Version\ :\ Mon\ Mar\ 20\ 00:00:00\ JST\ 2023
 .br
 
 .br
@@ -263,9 +263,9 @@ plus(1)、ratio(1)、sm2(1)、sm4(1)、sm5(1)、ysum(1)
 .br
 
 .br
-last\ modified:\ Sat\ Feb\ \ 4\ 18:01:52\ JST\ 2023
+last\ modified:\ Mon\ Mar\ 20\ 09:12:23\ JST\ 2023\ 
 .br
 Contact\ us:\ uecinfo@usp-lab.com
 .br
-Copyright\ (c)\ 2012-2014\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
+Copyright\ (c)\ 2012-2023\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
 .br
