filename of calclock is optional.

--- a/man/calclock.1
+++ b/man/calclock.1
@@ -17,9 +17,9 @@ calclock\ :\ 日付と時刻を秒数に変換
 .br
 
 .br
-Usage\ \ \ :\ calclock\ [-r]\ [<f1>\ <f2>\ <f3>\ ...]\ <file>
+Usage\ \ \ :\ calclock\ [-r]\ [<f1>\ <f2>\ <f3>\ ...]\ [<file>]
 .br
-Version\ :\ Thu\ Jan\ 19\ 03:12:32\ JST\ 2023
+Version\ :\ Sat\ Apr\ \ 1\ 15:40:04\ JST\ 2023
 .br
 Edition\ :\ 1
 .br
@@ -206,7 +206,7 @@ dayslash(1)、mdate(1)、yobi(1)
 .br
 
 .br
-last\ modified:\ Sat\ Feb\ \ 4\ 18:01:52\ JST\ 2023
+last\ modified:\ Sat\ Apr\ \ 1\ 15:40:57\ JST\ 2023
 .br
 Contact\ us:\ uecinfo@usp-lab.com
 .br
