--- a/man/check_cmp_name.1
+++ b/man/check_cmp_name.1
@@ -21,7 +21,7 @@ Usage\ \ \ :\ check_cmp_name\ <expression>\ <name_file>
 .br
 Option\ \ :\ --through\ <string>
 .br
-Version\ :\ Tue\ Oct\ 19\ 23:46:03\ JST\ 2021
+Version\ :\ Thu\ Jul\ 20\ 02:14:04\ JST\ 2023
 .br
 Edition\ :\ 1
 .br
@@ -149,9 +149,9 @@ E_003\ 3
   1
 
 .br
-last\ modified:\ Thu\ Aug\ \ 4\ 05:16:09\ JST\ 2022
+last\ modified:\ Thu\ Jul\ 20\ 09:21:07\ JST\ 2023
 .br
 Contact\ us:\ uecinfo@usp-lab.com
 .br
-Copyright\ (c)\ 2012-2022\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
+Copyright\ (c)\ 2012-2023\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
 .br
