--- a/man/keycut.1
+++ b/man/keycut.1
@@ -247,9 +247,9 @@ data.(第2フィールドの値)となる。
 .br
 -aオプションと-zオプションを併用したときは、すでに存在する圧縮ファイルに圧縮フ
 .br
-ァイルが追記される。生成されるファイルはgunzip(1)コマンドで展開できるが、仕様的
+ァイルが追記される。生成されるファイルはgunzip(1)コマンドで展開できる。
 .br
-に正しい動作はどうかは未調査。
+(https://www.gnu.org/software/gzip/manual/gzip.html#Advanced-usage-1)
 .br
 
 .br
@@ -261,9 +261,9 @@ sorter(1)、マスタファイル(5)、トランザクションファイル(5)
 .br
 
 .br
-last\ modified:\ Thu\ Aug\ 11\ 13:19:05\ JST\ 2022
+last\ modified:\ Sun\ Aug\ 20\ 09:55:56\ JST\ 2023
 .br
 Contact\ us:\ uecinfo@usp-lab.com
 .br
-Copyright\ (c)\ 2012-2022\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
+Copyright\ (c)\ 2012-2023\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
 .br
