--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ﻿               Universal Shell Programming Laboratory
                          uecinfo@usp-lab.com
-                             2023/07/20
+                             2024/11/14
 
 Open usp Tukubaiとは
 ====================
@@ -31,7 +31,7 @@ Open usp Tukubaiのサポート(有償)、商用版Tukubaiに関するお問
 ===========
 
 ダウンロードページ
-  https://uec.usp-lab.com/tukubai_download
+  https://www.uni-tama.com/cgi/DOCUMENT_UEC.CGI?CATEGORY=TUKUBAI&POMPA=DOWNLOAD
 
 GitHub
   https://github.com/usp-engineers-community/Open-usp-Tukubai
@@ -54,7 +54,7 @@ uecinfo@usp-lab.comまでご連絡いただきたい。
 ============
 
 オンラインコマンドマニュアル
-  https://uec.usp-lab.com/tukubai_man
+  https://www.uni-tama.com/cgi/COMMAND.CGI
 
 付属のマニュアル
   デフォルトインストール先は
@@ -66,8 +66,8 @@ uecinfo@usp-lab.comまでご連絡いただきたい。
 文献
 ====
 
-  https://uec.usp-lab.com/
-    UEC - usp engineers' community site
+  https://www.uni-tama.com/
+    ユニケージ魂
 
   - USP MAGAZINE
   - 技術評論社 Software Design
