Use the raw strings for regular expressions in comma.

--- a/man/comma.1
+++ b/man/comma.1
@@ -1,4 +1,4 @@
-.TH  Tukubai 1 "20 Feb 2023" "usp Tukubai" "Tukubai コマンド マニュアル"
+.TH  Tukubai 1 "29 Dec 2025" "usp Tukubai" "Tukubai コマンド マニュアル"
 
 .br
 comma(1)
@@ -179,9 +179,9 @@ keta(1)
 .br
 
 .br
-last\ modified:\ Mon\ Feb\ 20\ 01:48:41\ JST\ 2023
+last\ modified:\ Mon_Dec_29_05:21:57_UTC_2025
 .br
 Contact\ us:\ uecinfo@usp-lab.com
 .br
-Copyright\ (c)\ 2012-2023\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
+Copyright\ (c)\ 2012-2025\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
 .br
