Use the regular expression string in mdate.

--- a/man/mdate.1
+++ b/man/mdate.1
@@ -1,4 +1,4 @@
-.TH  Tukubai 1 "25 Sep 2022" "usp Tukubai" "Tukubai コマンド マニュアル"
+.TH  Tukubai 1 "02 Jan 2026" "usp Tukubai" "Tukubai コマンド マニュアル"
 
 .br
 mdate(1)
@@ -256,9 +256,9 @@ calclock(1)、dayslash(1)、yobi(1)
 .br
 
 .br
-last\ modified:\ Sun\ Sep\ 25\ 06:49:14\ JST\ 2022
+last\ modified:\ Fri Jan 02 04:32:23 JST 2026
 .br
 Contact\ us:\ uecinfo@usp-lab.com
 .br
-Copyright\ (c)\ 2012-2022\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
+Copyright\ (c)\ 2012-2026\ Universal\ Shell\ Programming\ Laboratory\ All\ Rights
 .br
